--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -77,7 +77,11 @@ button {
   display: inline-block;
   padding: 0.8rem 1.4rem;
   font-weight: 700;
-  background-image: linear-gradient(90deg, var(--ff-blue), var(--ff-dark-blue), var(--ff-green), var(--ff-dark-green));
+  background-image: linear-gradient(90deg, 
+    var(--ff-blue), 
+    var(--ff-dark-blue), 
+    var(--ff-green), 
+    var(--ff-dark-green));
   color: var(--ff-smoke);
   border-radius: 5px;
   text-align: center;
@@ -115,8 +119,12 @@ button {
   justify-content: center;
   height: 150px;
   font-family: "Jersey10", sans-serif;
-
-  background-image: linear-gradient(90deg, var(--ff-blue), var(--ff-dark-blue), var(--ff-green), var(--ff-dark-green));
+  /* Text gradient taken from Kevin Powell YouTube short */
+  background-image: linear-gradient(90deg, 
+    var(--ff-blue), 
+    var(--ff-dark-blue), 
+    var(--ff-green), 
+    var(--ff-dark-green));
   background-clip: text;
   color: transparent;
 }
@@ -141,7 +149,9 @@ button {
   }
 
 .background {
-  background-image: linear-gradient(135deg, var(--ff-dark-blue), var(--ff-dark-green));
+  background-image: linear-gradient(135deg, 
+    var(--ff-dark-blue), 
+    var(--ff-dark-green));
   border: solid 4px var(--ff-smoke);
   border-radius: 12px;
   padding: 2rem 1rem;
