--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -63,6 +63,7 @@ body {
 }
 
 .game-end-modal p {
+  font-family: 'Roboto-Regular', sans-serif;
   font-size: 0.9rem;
   color: #777;
 }
@@ -214,6 +215,23 @@ p {
   display: block;
   border-radius: 5px;
   border: 1px solid #00000041;
+}
+
+.reset-btn {
+  margin: 3rem auto;
+  display: block;
+  padding: 0.8rem 1.4rem;
+  font-weight: 700;
+  color: var(--ff-dark-green);
+  border-radius: 6px;
+  font-size: 1em;
+  border: solid 2px var(--ff-dark-green);
+  transition: 0.25s ease-in-out;
+}
+
+.reset-btn:hover {
+  background-color: var(--ff-green);
+  color: var(--ff-smoke);
 }
 
 /* media queries */
